# UWECYBERFRONT

./: .gitignore  CMakeLists.txt  README.md  build_and_run.sh  test_text  test_text.cpp  test_text.cpp.save  working_test  working_test.cpp
data/: characters.json  missions.json
include/: engine.hpp  forensic_tools.hpp  game_state.hpp  load_characters.hpp  load_missions.hpp  mission_logic.hpp  mission_manager.hpp  ui.hpp
src/: engine.cpp  forensic_tools.cpp  game_state.cpp  load_characters.cpp  load_missions.cpp  main.cpp  mission_logic.cpp  mission_manager.cpp  ui.cpp
